--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "nuxt": "3.0.0",
     "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4"
+  },
+  "dependencies": {
+    "date-fns": "^2.29.3"
   }
 }
