--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "tailwindcss": "^3.2.4"
   },
   "dependencies": {
-    "date-fns": "^2.29.3"
+    "date-fns": "^2.29.3",
+    "tsparticles": "^2.7.1",
+    "vue3-particles": "^2.7.1"
   }
 }
